fix: disable hover on mobile devices

--- a/static/style/inverted-style.css
+++ b/static/style/inverted-style.css
@@ -82,7 +82,7 @@
   }
   * {
     font-family: "Proxima Nova", "Ubiquity Nova", sans-serif;
-    color: #000000;
+    color: #ffffff;
     font-weight: 500;
   }
   @font-face {
@@ -113,7 +113,7 @@
     transition: 125ms opacity ease-out 62.5ms;
   }
   #issues-container:hover .issue-element-inner {
-    opacity: 0.5;
+    opacity: 1;
   }
   #issues-container.keyboard-selection:hover .issue-element-inner {
     opacity: 1;
@@ -125,10 +125,10 @@
     user-select: none;
   }
   #issues-container > div:first-child {
-    border-top: 1px solid #7f7f7f20;
+    border-top: 1px solid #80808020;
   }
   #issues-container > div:last-child {
-    border-top: 1px solid #7f7f7f20;
+    border-top: 1px solid #80808020;
   }
   #issues-container > div {
     padding: 0 16px;
@@ -138,7 +138,7 @@
     background-repeat: no-repeat;
     opacity: 0.125;
     margin: 3px auto;
-    border: 1px solid #7f7f7f20;
+    border: 1px solid #80808020;
     border-radius: 4px;
     cursor: pointer;
     margin: 4px;
@@ -161,19 +161,24 @@
     opacity: 1;
     filter: blur(0);
   }
-  #issues-container > div:hover {
-    opacity: 1;
-    transition: background-color 0s;
-  }
-  #issues-container > div:hover .info {
-    opacity: 1;
-  }
-  #issues-container > div:hover .issue-element-inner {
-    transition: 125ms opacity ease-in-out;
-    opacity: 1;
+  @media (hover: hover) {
+    #issues-container > div:hover {
+      opacity: 1;
+      transition: background-color 0s;
+    }
+    #issues-container > div:hover .info {
+      opacity: 1;
+    }
+    #issues-container > div:hover .issue-element-inner {
+      transition: 125ms opacity ease-in-out;
+      opacity: 1;
+    }
+    #issues-container:hover .issue-element-inner {
+      opacity: 0.5;
+    }
   }
   #issues-container > div:active {
-    background-color: #7f7f7f40;
+    background-color: #80808040;
   }
   #issues-container h3 {
     line-height: 1;
@@ -186,7 +191,7 @@
   p {
     margin: 0;
     line-height: 1;
-    color: #404040;
+    color: #bfbfbf;
     font-size: 12px;
     letter-spacing: 0.5px;
     text-rendering: geometricPrecision;
@@ -196,7 +201,7 @@
   li {
     margin: 0;
     line-height: 1;
-    color: #404040;
+    color: #bfbfbf;
     font-size: 12px;
     letter-spacing: 0.5px;
     text-rendering: geometricPrecision;
@@ -234,7 +239,7 @@
     font-size: 12px;
     text-align: center;
     white-space: nowrap;
-    background-color: #7f7f7f20;
+    background-color: #80808020;
     width: 64px;
     letter-spacing: 0.5px;
     flex-grow: 4;
@@ -260,13 +265,13 @@
     cursor: pointer;
   }
   .filters-container label:not([for="view-toggle"]):hover {
-    background-color: #7f7f7f40;
+    background-color: #80808040;
   }
   .filters-container label:not([for="view-toggle"]):active {
-    background-color: #7f7f7f80;
+    background-color: #80808080;
   }
   input[type="radio"]:checked + label:not([for="view-toggle"]) {
-    background-color: #7f7f7f80 !important;
+    background-color: #80808080 !important;
   }
   .labels {
     display: flex;
@@ -336,18 +341,18 @@
     border-style: unset;
     border-color: unset;
     border-image: unset;
-    border: 1px solid #7f7f7f20;
+    border: 1px solid #80808020;
     padding: 8px 16px;
     border-radius: 4px;
     text-transform: uppercase;
     letter-spacing: 1px;
-    background-color: #7f7f7f10;
+    background-color: #80808010;
   }
   button:hover {
-    background-color: #7f7f7f20;
+    background-color: #80808020;
   }
   button:active {
-    background-color: #7f7f7f40;
+    background-color: #80808040;
   }
   .toolbar {
     position: fixed;
@@ -357,7 +362,7 @@
     backdrop-filter: blur(8px);
     padding: 4px;
     display: flex;
-    border-bottom: 1px solid #7f7f7f20;
+    border-bottom: 1px solid #80808020;
     -webkit-backdrop-filter: blur(8px);
     align-items: center;
   }
@@ -510,7 +515,7 @@
   }
   .preview hr {
     border-width: 0;
-    border-top: 1px solid #7f7f7f20;
+    border-top: 1px solid #80808020;
   }
   .preview p {
     line-height: 1.25;
@@ -551,7 +556,7 @@
   }
   .preview .preview-header a[href*="//"] svg
   {
-    fill: #00000080;
+    fill: #ffffff80;
     vertical-align: middle;
     height: 20px;
   }
@@ -579,7 +584,7 @@
     position: fixed;
     transition: 0.25s all cubic-bezier(0, 1, 1, 1);
     max-width: 640px;
-    border: 1px solid #7f7f7f20;
+    border: 1px solid #80808020;
     border-radius: 4px;
     opacity: 0;
     top: 60px;
@@ -594,7 +599,7 @@
     pointer-events: all;
   }
   .close-preview svg {
-    fill: #00000080;
+    fill: #ffffff80;
     vertical-align: middle;
     height: 36px;
   }
@@ -609,7 +614,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 8px 16px;
-    border-bottom: 1px solid #7f7f7f20;
+    border-bottom: 1px solid #80808020;
   }
   .preview-header > a {
     word-wrap: initial;
@@ -652,7 +657,7 @@
     padding: 0;
   }
   .preview button.close-preview:hover svg {
-    fill: #000000;
+    fill: #ffffff;
   }
   .preview li {
     margin-bottom: 8px;
@@ -668,7 +673,7 @@
     padding: 4px;
     border: none;
     border-radius: 4px;
-    background-color: #7f7f7f20;
+    background-color: #80808020;
     width: 100%;
     max-width: 500px;
     height: 16px;
@@ -701,7 +706,7 @@
     bottom: 0;
     bottom: env(safe-area-inset-bottom);
     opacity: 1;
-    border-top: 1px solid #7f7f7f20;
+    border-top: 1px solid #80808020;
     border-bottom: unset;
   }
   #bottom-bar a {
@@ -749,7 +754,7 @@
     }
   }
   .svg-icon {
-    fill: #070707;
+    fill: #f8f8f8;
     width: 24px;
     height: 24px;
   }
@@ -761,7 +766,7 @@
   .github-avatar-default {
     width: 48px;
     height: 48px;
-    background-color: #7f7f7f;
+    background-color: #808080;
   }
   #view-toggle:checked::after {
     content: "Proposals";
@@ -794,7 +799,7 @@
     vertical-align: middle;
     opacity: 0.25;
     font-size: 12px;
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     display: inline-block;
   }
@@ -802,10 +807,10 @@
     opacity: 1;
   }
   #bottom-right svg {
-    fill: #000000bf;
+    fill: #ffffffbf;
   }
   #bottom-right:hover svg {
-    fill: #000000;
+    fill: #ffffff;
   }
 
   #issues-container::after {
@@ -813,8 +818,8 @@
     display: block;
     width: 48px;
     height: 48px;
-    border: 4px solid #00000040;
-    border-top: 4px solid #000000;
+    border: 4px solid #ffffff40;
+    border-top: 4px solid #ffffff;
     border-radius: 50%;
     animation:
       spin 1.5s cubic-bezier(1, 0, 1, 1) infinite alternate,
@@ -838,11 +843,11 @@
 
     75% {
       transform: rotate(5400deg);
-      border-bottom-color: #000000;
+      border-bottom-color: #ffffff;
     }
     100% {
       transform: rotate(7200deg);
-      border-color: #000000;
+      border-color: #ffffff;
     }
   }
   @keyframes fadeOut {
